# DjangoDRFTutorial

./: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
presentation/: models.py  serializers.py  views.py  wsgi.py
presentation/migrations/: 0001_initial.py  0002_author_alter_book_author.py  0002_author_category_secondtablebooks_authorprofile_and_more.py  0003_alter_secondtablebooks_table.py
presentation/templates/: book_list.html  book_list_2.html
routers/: routers.py
tutorial/: asgi.py  settings.py  urls.py
